--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,5 @@
 
 en:
   hello: "Hello world"
+  error:
+    unauthenticated_request: 'Could not authenticate user! Please ensure you have logged in!'
