--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,3 +33,4 @@ en:
   hello: "Hello world"
   error:
     unauthenticated_request: 'Could not authenticate user! Please ensure you have logged in!'
+    failed_to_login: 'Failed to login!'
