Update message to improve readability on FE side

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,3 +35,5 @@ en:
     unauthenticated_request: 'Could not authenticate user! Please ensure you have logged in!'
     failed_to_login: 'Failed to login!'
     already_logged_in: 'Already login! Please logout before login again'
+    movies:
+      failed_to_read_data_from_url: 'Failed to read data from url'
